Backend - User & Authentication

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 API_URL = /api/v1
 CONNECTION_STRING = mongodb+srv://shop-user:user@123@cluster0.ts1ed.mongodb.net/eshop-db?retryWrites=true&w=majority
+SECRET_KEY = my-secret-key
